<resources>
    <string name="app_name">WeatherForecastApplication</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="temp_unit">°C</string>
    <string name="celsius">°C</string>
    <string name="degree">°</string>
    <string name="humidity">Humidity</string>
    <string name="feels_like">Feels like</string>
    <string name="wind_speed">Wind speed</string>
    <string name="pressure">Pressure</string>
    <string name="clouds">Clouds</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="setting">Setting</string>
    <string name="gps">GPS</string>
    <string name="map">Map</string>
    <string name="arabic">Arabic</string>
    <string name="english">English</string>
    <string name="meter_sec">Meter/Sec</string>
    <string name="miles_hour">Miles/Hour</string>
    <string name="celsius_text">Celsius</string>
    <string name="fahrenheit">Fahrenheit</string>
    <string name="kelvin">Kelvin</string>
    <string name="favorite">Favorite</string>
    <string name="select_location">Select Location</string>
    <string name="save_location_to_favorite">Save Location To Favorite</string>
    <string name="alerts">Alerts</string>
    <string name="home">Home</string>
    <string name="weather">Weather</string>
    <string name="alarm">Alarm</string>
    <string name="notification">Notification</string>
    <string name="select_duration">Select Duration:</string>
    <string name="enable_alert">Enable Alert</string>
    <string name="add_alert">Add Alert</string>
</resources>